functionality is all there, needs some cleanup

--- a/library.properties
+++ b/library.properties
@@ -7,4 +7,4 @@ paragraph=Arduino library for the TMP117 sensors in the Adafruit shop
 category=Sensors
 url=https://github.com/adafruit/Adafruit_TMP117
 architectures=*
-depends=Adafruit Unified Sensor, Adafruit BusIO
+depends=Adafruit Unified Sensor, Adafruit BusIO, Adafruit SSD1306
